# RustyHashBackUp

./: .gitignore  API.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  IMPROVEMENTS.md  IMPROVEMENT_SUGGESTIONS.md  LICENSE.md  README.md  SCHEDULING.md  WEB_UI_API_REQUIREMENTS.md
.github/: CODEOWNERS
backend/: Cargo.toml  Rocket.toml
backend/src/: api_routes.rs  api_state.rs  main.rs  web_routes.rs
backend/src/models/: api.rs  backup_row.rs  config.rs  config_validator.rs  dry_run_mode.rs  error.rs  log_row.rs  mod.rs  storage.rs
backend/src/repo/: sqlite.rs
backend/src/service/: backup.rs
backend/src/utils/: db_logger.rs  directory.rs  mod.rs  progress.rs
default_files/: config.json
docker/: Dockerfile
example/: config.json
src/: api_routes.rs  api_state.rs  main.rs  web_routes.rs
src/models/: api.rs  backed_up_file.rs  config.rs  config_validator.rs  dry_run_mode.rs  error.rs  file_hash.rs  mod.rs  prepped_backup.rs  source_row.rs
src/repo/: sqlite.rs
src/service/: backup.rs  hash.rs  mod.rs
src/services/: sqlite.rs
src/utils/: directory.rs  hash.rs  mod.rs  progress.rs
static/css/: custom.css
static/js/: app.js
templates/: base.html.tera  configuration.html.tera  dashboard.html.tera  help.html.tera  logs.html.tera
templates/partials/: header.html.tera  logs_preview.html.tera  metric_card.html.tera  quick_actions.html.tera  sidebar.html.tera
web/: package-lock.json  package.json  tailwind.config.js
web/static/css/: tailwind.input.css  tailwind.output.css
web/templates/: base.html.tera  configuration.html.tera  dashboard.html.tera  help.html.tera  logs.html.tera
web/templates/partials/: config_form_response.html.tera  dashboard_metrics.html.tera  log_entries.html.tera  log_stats.html.tera  logs_preview.html.tera  logs_preview_items.html.tera  metric_card.html.tera  quick_actions.html.tera  sidebar.html.tera  storage_overview.html.tera
