[package]
name = "RustyHashBackup"
version = "0.1.0"
edition = "2021"
authors = ["NerfHerder"]
license = "MIT"
description = "A tool to generate hashes from files"
keywords = ["cli", "hash"]
categories = ["command-line-utilities"]


[dependencies]
clap = { version = "4.0", features = ["derive"] }
blake2 = "0.11.0-pre.4"
walkdir = "2.5.0"
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
