[package]
name = "RustyHashBackUp"
version = "0.1.0"
edition = "2021"
authors = ["NerfHerder"]
license = "MIT"
description = "A tool to generate hashes from files"
keywords = ["cli", "hash"]
categories = ["command-line-utilities"]


[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
blake2 = "0.10.6"
walkdir = "2.5.0"
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
once_cell = "1.21.0"
rayon = "1.10.0"
