[package]
name = "RustyHashBackUp"
version = "0.1.0"
edition = "2021"
authors = ["NerfHerder"]
license = "MIT"
description = "A tool to back up files based on hashes"
keywords = ["cli", "hash"]
categories = ["command-line-utilities"]


[dependencies]
clap = { version = "4.5.32", features = ["derive", "env"] }
blake2 = "0.10.6"
walkdir = "2.5.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
once_cell = "1.21.0"
rayon = "1.10.0"
hex = "0.4"
num_cpus = "1.16.0"
log = "0.4"
env_logger = "0.11"
indicatif = "0.18"
thiserror = "2.0"
anyhow = "1.0"
r2d2 = "0.8"
r2d2_sqlite = "0.31.0"

[dev-dependencies]
mockall = "0.14"
tempfile = "3.8"
serial_test = "3.2"
