[package]
name = "RustyHashBackUp"
version = "0.1.0"
edition = "2021"
authors = ["NerfHerder"]
license = "MIT"
description = "A tool to back up files based on hashes"
keywords = ["cli", "hash"]
categories = ["command-line-utilities"]


[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
blake2 = "0.10"
walkdir = "2.5"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.21"
rayon = "1.11"
hex = "0.4"
num_cpus = "1.17"
log = "0.4"
env_logger = "0.11"
indicatif = "0.18"
thiserror = "2.0"
anyhow = "1.0"
r2d2 = "0.8"
r2d2_sqlite = "0.31"
cron = "0.15"
chrono = "0.4"
ctrlc = "3.5"
rocket = { version = "0.5", features = ["json"] }
rocket_dyn_templates = { version = "0.2", features = ["tera"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
tokio = { version = "1.48", features = ["sync"] }

[dev-dependencies]
tempfile = "3.23"
serial_test = "3.2"
